[package]
name = "tinikeyval"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"  # error handling
bytes = "1.10.1"  # helps manage buffers
ctrlc = { version = "3.5.0", features = ["termination"] }
futures = "0.3.31"
fxhash = "0.2.1"
memchr = "2.7.5"
rand = "0.9.2"
thiserror = "2.0.16"  # error handling
tokio = { version = "1.47.1", features = ["full"] }  # async networking
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
