[package]
name = "tinikeyval"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["client"]

[workspace.dependencies]
bytes = "1.10.1"
futures = "0.3.31"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }

[dependencies]
anyhow = "1.0.100"
bytes = { workspace = true }
ctrlc = { version = "3.5.0", features = ["termination"] }
futures = { workspace = true }
fxhash = "0.2.1"
memchr = "2.7.5"
rand = "0.9.2"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
