[package]
name = "tinikeyval"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["client", "protocol"]

[workspace.dependencies]
bytes = "1.10"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
bytes = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
crc-fast = "1.5.0"
ctrlc = { version = "3.5.0", features = ["termination"] }
futures = { workspace = true }
fxhash = "0.2.1"
rand = "0.9.2"
thiserror = { workspace = true }
tinikeyval-protocol = { path = "./protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
